force-app/main/default/objects/Plant__c/Plant__c.object-meta.xml
<CustomObject>
    <description>Cargill Product Production Plants</description>
    <label>Plant</label>
    <nameField>
        <label>Plant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plants</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>