force-app/main/default/objects/Plant__c/fields/Calendar_Def_Ship_Shft_3__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Def_Ship_Shft_3__c</fullName>
    <label>Calendar Def Ship Shft 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>