force-app/main/default/objects/Plant__c/fields/CapitalImprovement__c.field-meta.xml
<CustomField>
    <fullName>CapitalImprovement__c</fullName>
    <label>Capital Improvement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>