force-app/main/default/objects/Plant__c/fields/Days_In_Cooler__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Cooler__c</fullName>
    <label>Days In Cooler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>