force-app/main/default/objects/Plant__c/fields/EDI_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>EDI_Phone_Number__c</fullName>
    <label>EDI Phone Number</label>
    <type>Phone</type>
</CustomField>