force-app/main/default/objects/Plant__c/fields/Loc_Previous_System_Value__c.field-meta.xml
<CustomField>
    <fullName>Loc_Previous_System_Value__c</fullName>
    <label>Loc Previous System Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>