force-app/main/default/objects/Plant__c/fields/Loc_Summary_Bucket_ID__c.field-meta.xml
<CustomField>
    <fullName>Loc_Summary_Bucket_ID__c</fullName>
    <label>Loc Summary Bucket ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>