force-app/main/default/objects/Plant__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <externalId>true</externalId>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>