force-app/main/default/objects/Plant__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>P</fullName>
            </value>
            <value>
                <fullName>X</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>Z</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>