force-app/main/default/objects/Plant__c/fields/M_S_Selection_Primal__c.field-meta.xml
<CustomField>
    <fullName>M_S_Selection_Primal__c</fullName>
    <label>M/S Selection Primal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>