force-app/main/default/objects/Plant__c/fields/PA_Report_Zero_Threshold__c.field-meta.xml
<CustomField>
    <fullName>PA_Report_Zero_Threshold__c</fullName>
    <label>PA Report Zero Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>