force-app/main/default/objects/Plant__c/fields/Plant_Alias__c.field-meta.xml
<CustomField>
    <fullName>Plant_Alias__c</fullName>
    <label>Plant Alias</label>
    <length>20</length>
    <type>Text</type>
</CustomField>