force-app/main/default/objects/Plant__c/fields/Plant_Capacity_M_S__c.field-meta.xml
<CustomField>
    <fullName>Plant_Capacity_M_S__c</fullName>
    <label>Plant Capacity M/S</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>