force-app/main/default/objects/Plant__c/fields/Plant_Region__c.field-meta.xml
<CustomField>
    <fullName>Plant_Region__c</fullName>
    <label>Plant Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>