force-app/main/default/objects/Plant__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Region A</fullName>
            </value>
            <value>
                <fullName>Region B</fullName>
            </value>
            <value>
                <fullName>Region C</fullName>
            </value>
            <value>
                <fullName>Region D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>