force-app/main/default/objects/Plant__c/fields/SPLC_Code__c.field-meta.xml
<CustomField>
    <fullName>SPLC_Code__c</fullName>
    <label>SPLC Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>