force-app/main/default/objects/Plant__c/fields/Spot_Live_Dairy_Inv_Qty__c.field-meta.xml
<CustomField>
    <fullName>Spot_Live_Dairy_Inv_Qty__c</fullName>
    <label>Spot Live Dairy Inv Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>