force-app/main/default/objects/Plant__c/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit_of_Measure_Combined</valueSetName>
    </valueSet>
</CustomField>